--- a/config.yaml
+++ b/config.yaml
@@ -3,9 +3,9 @@ subject: 'cat:cs.*'
 
 # 検索キーワード
 keywords:
-        kaggle: 3
-        resnet: 3
-        anomaly detection: 1
-
+        dialog: 1
+        dialogue: 1
+        model compression: 2
+        BERT: 2
 # 通知の閾値
 score_threshold: 0
