--- a/config.yaml
+++ b/config.yaml
@@ -7,5 +7,6 @@ keywords:
         dialogue: 1
         model compression: 2
         BERT: 2
+        dialogue state tracking: 2
 # 通知の閾値
 score_threshold: 0
